# abcd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.md  go.mod  notes.md
cmd/: hello_json.go
cmd/json/: hello_json.go
examples/: Plotly.rs  add_particle_summary.rs  generation.json  particle.json  simple.json  unfair-coin.rs  unfair_coin.rs
examples/olcm_test_plot/: README.md  main.rs
examples/olcm_test_plot/plot/: requirements.txt  script.py
examples/or_coins/: README.md  config.toml  main.rs  run_or_coins.sh
examples/or_coins/plot/: script.py
examples/or_coins_olcm/: README.md  config.toml  main.rs  run.sh
examples/or_coins_olcm/plot/: script.py
examples/or_coins_trivial_kernel/: README.md  config.toml  main.rs  plot.py  run.sh
examples/or_samples/: README.md  main.rs  plot.py
examples/or_samples/plot/: script.py
examples/unfair_coin/: README.md  config.toml  main.rs  readme.md  run_unfair_coin.sh
examples/unfair_coin/plot/: .gitignore  run.sh  script.py
examples/xor_coins/: main.rs  run_xor_coins.sh
examples/xor_coins/plot/: .gitignore  requirements.txt  script.py
examples/xor_samples/: README.md  main.rs
examples/xor_samples/plot/: script.py
pkg/core/: model.go
plot/: environment.yml  plot.ipynb  ploy.ipynb
python/: altair.ipynb  environment.yml  plot.ipynb  plot.py  seaborn.ipynb
resources/examples/: config.toml  run_unfair_coin.sh
resources/examples/empty_prefix/results/: clean_s3.sh
resources/test/: config.toml  config_test.toml
resources/test/fs/example/gen_002/: gen_002.json  uid2_1.json
resources/test/fs/example/gen_003/: uid_1.json
resources/test/olcm/: particles.json
resources/test/storage/gen_mismatch/gen_002/: gen_002.json
resources/test/storage/normal/completed/: gen_002.json
resources/test/storage/normal/gen_002/accepted/: uid_g2_2.json
resources/test/storage/normal/gen_003/accepted/: uid_g3_2.json
resources/test/storage/normal/gen_003/rejected/: uid_g3_4.json
resources/test/storage/rejected_imposter_none_accepted/completed/: gen_002.json
src/: config.rs  covariance.rs  error.rs  generation.rs  lib.rs  olcm.rs  types.rs  wrapper.rs
src/algorithm/: mod.rs
src/attic/: filesystem.rs
src/etc/: config.rs
src/kernel/: mod.rs  olcm.rs
src/storage/: config.rs  filesystem.rs  mod.rs  retry.rs  s3.rs
src/storage/s3/: mod.rs  tests.rs
(+10 files in other folders)
