[package]
name = "abcd"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.4.3"
#rusoto_core = { version = "0.46.0", default_features = false, features=["rustls"] }
#rusoto_s3 = { version = "0.46.0", default_features = false, features=["rustls"] }
aws-config = "0.6.0"
aws-smithy-http = "0.36.0"
aws-smithy-types-convert = { version = "0.37.0", features = ["convert-chrono"] }
bytes = "1.1.0"
aws-sdk-s3 = "0.6.0"
tokio = {version = "1.5.0", features = ["full"]}
futures = "0.3.15"
toml = "0.5"
envmnt = "0.9.0"
log = "0.4.0"
env_logger = "0.8.4"
rand = "0.8.0"
cast = "0.2.7"

[dev-dependencies]
tempfile = "3"