[package]
name = "abcd"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.4.3"
aws-config = "0.47.0"
aws-smithy-http = "0.47.0"
bytes = "1.1.0"
aws-sdk-s3 = "0.17.0"
tokio = {version = "1.5.0", features = ["full"]}
futures = "0.3.15"
toml = "0.5"
envmnt = "0.9.0"
log = "0.4.0"
env_logger = "0.8.4"
rand = "0.8.0"
cast = "0.2.7"
statrs = "0.15.0"
exponential-backoff = "1.1.0"
clap = {version = "3.2.17", features = ["derive"]}

[dev-dependencies]
tempfile = "3"
color-eyre = "0.6.2"
path-absolutize = "3.0.13"