[package]
name = "abcd"
version = "0.2.2"
authors = ["tearne <tearne@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.10.5"
aws-config = "0.55.3"
aws-smithy-http = "0.55.3"
aws-sdk-s3 = "0.28.0"
bytes = "1.6.0"
tokio = {version = "1", features = ["full"]}
futures = "0.3.30"
toml = "0.5"
envmnt = "0.9.1"
log = "0.4.21"
env_logger = "0.8.4"
rand = "0.8.5"
cast = "0.2.7"
statrs = "0.16.1"
clap = {version = "3.2", features = ["derive"]}

[dev-dependencies]
tempfile = "3"
color-eyre = "0.6.3"
path-absolutize = "3.1.1"
